@@ -1,6 +1,7 @@
 2011-02-01  Stanislas Rolland  <typo3@sjbr.ca>
 
-	* Fixed bug #17373: Standalone images in RTE-enabled field not rendered in frontend 
+	* Fixed bug #17373: Standalone images in RTE-enabled field not rendered in frontend
+	* Fixed bug #17349: htmlArea RTE: JS error when using "Edit element"
 
 2011-02-01  Steffen Kamper  <steffen@typo3.org>
 
